risolti ulteriori errori

--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -151,13 +151,13 @@ si definiscono le strategie eventuali da adottare in difesa del progetto. Si ver
 la possibilità di brevettare il prodotto e di registrare un marchio. Infine si verifica che
 lo sviluppo non porti alla violazione di alcuna legge o normativa in vigore\\
 
-\item[Responsabile:] \\
+\item[Responsabile:]
 
 \item[Input:] conoscenza di eventuali prodotti simili nel mercato e normative/vincoli legali\\
 
 \item[Output:] documento formale che indica la fattibilità dal punto di vista legale. Se viene
 prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto
-rilascio del prodotto\\
+rilascio del prodotto
 
 \item[Attività:]
 \begin{itemize}
@@ -168,7 +168,7 @@ rilascio del prodotto\\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro{}
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -179,15 +179,15 @@ rilascio del prodotto\\
 \item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia
 e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati
 inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene
-studiata la possibilità di ottenere dei finanziamenti esterni \\
+studiata la possibilità di ottenere dei finanziamenti esterni 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse \\
+\item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse 
 
 \item[Output:] documento formale che indica la fattibilità dal punto di vista economico.
 All'interno di questo verrà illustrata la previsione economica del prodotto, illustrando i
-possibili guadagni ed indicando l'eventuale punto di pareggio.\\
+possibili guadagni ed indicando l'eventuale punto di pareggio.
 
 \item[Attività:]
 \begin{itemize}
@@ -199,7 +199,7 @@ possibili guadagni ed indicando l'eventuale punto di pareggio.\\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -209,15 +209,15 @@ possibili guadagni ed indicando l'eventuale punto di pareggio.\\
 \begin{description}
 \item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si
 studia e si definiscono quali sono i rischi in cui si può incombere durante tutte la fasi di
-sviluppo, così da poterli evitare o quantomeno gestire\\
+sviluppo, così da poterli evitare o quantomeno gestire
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
 \item[Input:] esperienze personali, conoscenze di rischi noti e documenti prodotti all’interno
-del WP\\
+del WP
 
 \item[Output:] documento formale che indica gli eventuali rischi che si possono verificare
-durante le varie fasi di sviluppo del progetto\\
+durante le varie fasi di sviluppo del progetto
 
 \item[Attività:]
 \begin{itemize}
@@ -229,7 +229,7 @@ durante le varie fasi di sviluppo del progetto\\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -240,15 +240,15 @@ durante le varie fasi di sviluppo del progetto\\
 in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti
 potranno interagire con esso. Successivamente si effettua un’analisi dei rischi sul piano dello sviluppo
 del software, si studia e si definiscono quali sono i rischi nei quali si
-può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomenogestire\\
+può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomenogestire
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
 \item[Input: ]documentazione prodotta nei WP precedenti ed esperienza personale degli
-analisti\\
+analisti
 
 \item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalità
-definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso\\
+definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso
 
 \item[Attività:]
 \begin{itemize}
@@ -261,7 +261,7 @@ definitive del prodotto finale e come sarà possibile per gli utenti interagire 
 \item approvazione
 \end{itemize}
 
-\item[Costo:] \euro \\
+\item[Costo:] \euro{}
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -270,14 +270,14 @@ definitive del prodotto finale e come sarà possibile per gli utenti interagire 
 
 \paragraph{Definizione dei requisiti}
 \begin{description}
-\item[Descrizione:] fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare\\
+\item[Descrizione:] fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
 \item[Input:] documentazione prodotta nei WP precedenti ed esperienza personale degli
-analisti\\
+analisti
 
-\item[Output:] documento formale ad uso esterno Analisi dei Requisiti\\
+\item[Output:] documento formale ad uso esterno Analisi dei Requisiti
 
 \item[Attività:]
 \begin{itemize}
@@ -288,7 +288,7 @@ analisti\\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -298,13 +298,13 @@ analisti\\
 \begin{description}
 \item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garan-
 tire qualità al prodotto. Identificazione delle strategie di controllo da utilizzare per
-aggiungere qualità al prodotto\\
+aggiungere qualità al prodotto
 
-\item[Responsabile:]  \\
+\item[Responsabile:]  
 
 \item[Input:] politiche e standard di qualità, esperienze passate degli analisti
 \item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli
-standard e le strategie da seguire per aggiungere qualità al prodotto\\
+standard e le strategie da seguire per aggiungere qualità al prodotto
 
 \item[Attività:]
 \begin{itemize}
@@ -318,7 +318,7 @@ standard e le strategie da seguire per aggiungere qualità al prodotto\\
 \item formalizzazione documenti
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -327,12 +327,12 @@ standard e le strategie da seguire per aggiungere qualità al prodotto\\
 \paragraph{Realizzazione e definizione del database}
 \begin{description}
 \item[Descrizione:] fase di sviluppo e codifica del database secondo quanto definito nella fase
-di progettazione\\
+di progettazione
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto,
-Piano di Qualifica ed altra documentazione tecnica\\
+Piano di Qualifica ed altra documentazione tecnica
 
 \item[Output:]database realizzato e pienamente funzionante
 \item[Attività:]
@@ -343,7 +343,7 @@ Piano di Qualifica ed altra documentazione tecnica\\
 \item verifica della qualità
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -353,14 +353,14 @@ Piano di Qualifica ed altra documentazione tecnica\\
 \paragraph{Realizzazione interfaccia applicazione}
 \begin{description}
 \item[Descrizione:] fase di sviluppo e codifica dell'interfaccia previste per il software, se-
-condo quanto definito nelle fasi di analisi e progettazione \\
+condo quanto definito nelle fasi di analisi e progettazione 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
 \item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Proget-
-to, Piano di Qualifica ed altra documentazione tecnica \\
+to, Piano di Qualifica ed altra documentazione tecnica 
 
-\item[Output:] interfaccia realizzata e pienamente funzionante\\
+\item[Output:] interfaccia realizzata e pienamente funzionante
 
 \item[Attività:]
 \begin{itemize}
@@ -370,7 +370,7 @@ to, Piano di Qualifica ed altra documentazione tecnica \\
 \item verifica della qualità
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -378,13 +378,13 @@ to, Piano di Qualifica ed altra documentazione tecnica \\
 
 \paragraph{Manuali Utente}
 \begin{description}
-\item[Descrizione:] realizzazione dei manuali utente per il supporto all’utente all'uso dell'interfaccia web. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l’esposizione con possibili soluzioni di problemi \\
+\item[Descrizione:] realizzazione dei manuali utente per il supporto all’utente all'uso dell'interfaccia web. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l’esposizione con possibili soluzioni di problemi 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] interfaccia prodotto \\
+\item[Input:] interfaccia prodotto 
 
-\item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio\\
+\item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio
 
 \item[Attività:]
 \begin{itemize}
@@ -394,7 +394,7 @@ to, Piano di Qualifica ed altra documentazione tecnica \\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -403,13 +403,13 @@ to, Piano di Qualifica ed altra documentazione tecnica \\
 \paragraph{Realizzazione documentazione database}
 \begin{description}
 \item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto
-per la realizzazione del database \\
+per la realizzazione del database 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del database \\
+\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del database 
 
-\item[Output:] documento con scopo documentale della codifica del software \\
+\item[Output:] documento con scopo documentale della codifica del software 
 
 \item[Attività:]
 \begin{itemize}
@@ -419,7 +419,7 @@ per la realizzazione del database \\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -428,13 +428,13 @@ per la realizzazione del database \\
 \paragraph{Documentazione interfaccia web}
 \begin{description}
 \item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto
-per la realizzazione del interfaccia \\
+per la realizzazione del interfaccia 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del interfaccia web\\
+\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del interfaccia web
 
-\item[Output:] documento con scopo documentale della codifica del software\\
+\item[Output:] documento con scopo documentale della codifica del software
 
 \item[Attività:]
 \begin{itemize}
@@ -444,7 +444,7 @@ per la realizzazione del interfaccia \\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -452,13 +452,13 @@ per la realizzazione del interfaccia \\
 
 \paragraph{Test unità}
 \begin{description}
-\item[Descrizione:] fase di test di tutte le singole unità software prodotte \\
+\item[Descrizione:] fase di test di tutte le singole unità software prodotte 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] interfaccia web e Piano di Qualifica\\
+\item[Input:] interfaccia web e Piano di Qualifica
 
-\item[Output:] documento riassuntivo dei risultati ottenuti dai test\\
+\item[Output:] documento riassuntivo dei risultati ottenuti dai test
 
 \item[Attività:]
 \begin{itemize}
@@ -471,7 +471,7 @@ per la realizzazione del interfaccia \\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -479,13 +479,13 @@ per la realizzazione del interfaccia \\
 
 \paragraph{Test intero sistema}
 \begin{description}
-\item[Descrizione:] fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti \\
+\item[Descrizione:] fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] interfaccia web e Piano di Qualifica, documento riassuntivo test di unità \\
+\item[Input:] interfaccia web e Piano di Qualifica, documento riassuntivo test di unità 
 
-\item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione \\
+\item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione 
 
 \item[Attività:]
 \begin{itemize}
@@ -498,7 +498,7 @@ per la realizzazione del interfaccia \\
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -510,13 +510,13 @@ per la realizzazione del interfaccia \\
 \paragraph{Collaudo}
 \begin{description}
 \item[Descrizione:] fase di test dell’intero sistema da effettuare prima del rilascio. Si cercano
-eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti \\
+eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] interfaccia web, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti \\
+\item[Input:] interfaccia web, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti 
 
-\item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti \\
+\item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti 
 
 \item[Attività:]
 \begin{itemize}
@@ -530,7 +530,7 @@ eventuali errori o malfunzionamenti e successivamente si certifica che tutte le 
 \item formalizzazione documento
 \item approvazione
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
 
@@ -539,19 +539,19 @@ eventuali errori o malfunzionamenti e successivamente si certifica che tutte le 
 \paragraph{Promozione del Prodotto}
 \begin{description}
 \item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il
-prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand \\
+prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand 
 
-\item[Responsabile:] \\
+\item[Responsabile:] 
 
-\item[Input:] alcune conoscenze di marketing e target clienti \\
+\item[Input:] alcune conoscenze di marketing e target clienti 
 
-\item[Output:] slogan, pubblicità scelte di mercato da intraprendere \\
+\item[Output:] slogan, pubblicità scelte di mercato da intraprendere 
 
 \item[Attività:]
 \begin{itemize}
 \item ricerca possibili clienti
 \item pubblicità rivolta alla categorie di clienti scelti
 \end{itemize}
-\item[Costo:] \euro \\
+\item[Costo:] \euro 
 \item[Tempi di realizzazione:]  giorni lavorativi
 \end{description}
